# smooth

./: .gitignore  8link.cpp  Effect.cpp  Effect.h  LICENSE  Lack.cpp  Pipl.r  README.md  RELEASE_NOTES-v1.5.0.md  RELEASE_NOTES-v1.6.0.md  THIRD_PARTY_LICENSES.md  bench.h  define.h  downMode.cpp  smooth_core.h  upMode.cpp  util.h  version.h  workbench_history.md
Mac/smooth.xcodeproj/: project.pbxproj
docs/: CAPTURE_32BPC_RUNBOOK.md  EXTERNAL_REVIEW_REQUEST.md  PHASE_2A_GPU_RESEARCH.md  PHASE_2A_GPU_RFC.md  PHASE_2A_PREP2B_DESIGN_MEMO.md  PHASE_2A_STATUS.md  RELEASE_NOTES-v1.5.1.md  WINDOWS_BUILD_ID_INTEGRATION.md
rust/smooth_core/: Cargo.toml  build-universal.sh  build-windows.bat  build.rs
rust/smooth_core/include/: smooth_core_ffi.h
rust/smooth_core/src/: blend.rs  compare.rs  down_mode.rs  lack.rs  lib.rs  link8.rs  preprocess.rs  process.rs  types.rs  up_mode.rs
rust/smooth_core/src/gpu/: cpu.rs  cuda.rs  detection.rs  fallback.rs  metal.rs  mod.rs  tests.rs
rust/smooth_core/src/gpu/shaders/: smooth.cu  smooth.metal
tests/: README.md  bench.sh  capture_32bpc.py  capture_config_32bpc.toml.template  compare_raw.py  fetch_goldens.sh  gen_test_images.py  regression_test.cpp  requirements-capture.txt  run_regression.sh  synth_32bpc.cpp  synthesize_32bpc_goldens.sh  test_white_option.cpp
tests/goldens/v1.4.0-ae2025/: manifest.toml
tests/goldens/v1.6.0-32bpc/: manifest.toml
win/: BUILD_WINDOWS.md  Pipl.rc  win.vcxproj  win.vcxproj.filters
