[package]
name    = "smooth_core"
version = "0.1.0"
edition = "2021"

[lib]
name       = "smooth_core"
crate-type = ["staticlib"]

[dependencies]
rayon     = "1"
# GPU scaffold (Sub-stage B). Real Metal / CUDA crates come in Sub-stage C/E.
dashmap   = "6"
once_cell = "1"
thiserror = "1"

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
panic       = "abort"
