[package]
name    = "smooth_core"
version = "0.1.0"
edition = "2021"

[lib]
name       = "smooth_core"
crate-type = ["staticlib"]

[dependencies]
rayon     = "1"
# GPU scaffold (Sub-stage B / C). Real Metal crate added below for macOS.
dashmap   = "6"
once_cell = "1"
thiserror = "1"
# Sub-stage C-2: per-instance UUID generation for sequence_data
# (RFC §6.5: v4 random, regenerate at every SETUP/RESETUP, never
# carry across save/load).
uuid      = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Sub-stage C: Metal backend (real bindings).
metal = "0.27"
objc  = "0.2"
foreign-types = "0.5"
# Sub-stage C-2.5b.2-prep2c diagnostic: completed handler for command buffer
# error → mark_fallen wiring (silent fail bug fix).
block = "0.1"

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
panic       = "abort"
